--- a/posts/2025-11-20-food-web-measurement-2/index.qmd
+++ b/posts/2025-11-20-food-web-measurement-2/index.qmd
@@ -6,6 +6,7 @@ categories: [community ecology, food webs, hierarchical modeling]
 format:
   html:
     toc: true
+bibliography: 2025-11-20.bib
 ---
 
 ```{r, echo=F, message=F, warning=F}
@@ -88,37 +89,41 @@ $$
 | $\sigma_{\alpha}$ | between-web variation in interaction rate    |
 | $*^{(z)}$         | standardized, non-centered latent deviations |
 
-Though this is an important advance, our detection probability is just another probability that we estimate. It is treated as a latent, random effect that accounts for *false negatives*. However, it might be reasonable to assume that detection is non-random: species with particular traits may be more readily observed. For example, if larger species are easier to sample, then we would detect their diets more often. To incorporate this, we make an adjustment to Equation 3. We have a few options here. First, let $M_i$ and $M_j$ be the log body masses of consumer $i$ and resource $j$.
+Though this is an important advance, our detection probability is just another probability that we estimate. It is treated as a latent, random effect that accounts for *false negatives*. However, it might be reasonable to assume that detection is non-random: species with particular traits may be more readily observed. For example, if larger species are easier to sample, then we would detect their diets more often. To incorporate this, we make an adjustment to Equation 3. We have a few options here. First, let $M_{i,k}$ and $M_{j,k}$ be the log body masses of consumer $i$ and resource $j$.
+
+We generate the raw body masses as $\text{exp}(\mathcal{N}(\mu_M, \ \sigma_M))$ only to transform it back using $\text{log}_{10}(M_{i,k})$.
 
 ### Consumer Size Model
 
-We define a parameter $\beta_M$ which controls the effect of consumer body mass on detection.
+We define a parameter $\nu_k$ which controls the effect of consumer body mass on detection.
 
 $$
 \begin{align}
-\text{logit}(p_{i,k}) = \mu_p + \beta_M M_i + \sigma_p p^{(z)}_{i,k}
+\text{logit}(p_{i,k}) = \mu_p + \gamma_k M_{i,k} + \sigma_p p^{(z)}_{i,k}
 \end{align}
 $$
 
-When $\beta_M > 0$, the feeding links of larger species are detected more often.
+When $\nu_k > 0$, the feeding links of larger species are detected more often. This model creates a serious confound: body mass effect on links and detection are competing, potentially making the probability $q_{ij,k}$ unidentifiable.
 
 ### Size Ratio Model
 
-An second approach could hypothesize that it is the ratio of $M_i$ to $M_j$ that influences detection. Since both covariates are on a log scale, we compute the difference between them and estimate the effect $\beta_R$.
+An second approach that aligns with food web theory [@allesina2011predicting] might hypothesize that it is the ratio of $M_i$ to $M_j$ that influences detection. Since both covariates are on a log scale, we compute the difference between them and estimate the effect $\nu_k$.
 
 $$
 \begin{align}
-\text{logit}(p_{ij,k}) &= \mu_p + \beta_R (M_i - M_j) + \sigma_p p^{(z)}_{ij,k}
+\text{logit}(p_{ij,k}) &= \mu_p + \gamma_k (M_{i,k} - M_{j,k}) + \sigma_p p^{(z)}_{ij,k}
 \end{align}
 $$
 
+This does not magically remove the identifiability problem but it slices the variation differently such that we can attribute link variation associated with size ratio vs. detection that is associated with consumer body size.
+
 ### Size Mismatch Model
 
-A third option would be to focus on the absolute difference between the species body sizes. This means something quite difference biologically.
+Similar to the size-ratio model, a third option would be to focus on the absolute difference between the species body sizes. This means something quite difference biologically.
 
 $$
 \begin{align}
-\text{logit}(p_{ij,k}) &= \mu_p + \beta_A |M_i - M_j| + \sigma_p p^{(z)}_{ij,k}
+\text{logit}(p_{ij,k}) &= \mu_p + \gamma_k |M_{i,k} - M_{j,k}| + \sigma_p p^{(z)}_{ij,k}
 \end{align}
 $$
 
@@ -128,55 +133,57 @@ Each of the detection mechanisms contain very different assumptions about how de
 2.  **Size Ratio Model**: This edge-level mechanisms suggests that the probability of observing a feeding link depends on the ratio of consumer to resource body size. Observing large predators feeding on smaller prey are more likely, whereas a predator which is much smaller than it prey are ecological unusual and difficult to detect. The detection probability of such unusual events is proportionally lower.
 3.  **Size Mismatch Model**: This edge-level mechanism assumes that detection probability depends on the absolute difference between predators and prey. This mechanism does not imply that size mismatches are uncommon, only that such interactions leave evidence that is more difficult to detect.
 
+# Simulation
+
 To further investigate these mechanisms, we can simulate their effect on detection probability.
 
 ```{r}
 # Setup
 set.seed(666)
 
-inv_logit <- function(x) exp(x) / (1 + exp(x))
+inv_logit = function(x) exp(x) / (1 + exp(x))
 
 # Parameters
-N <- 50
-mu_p <- -2
-sigma_p <- 0.25
-bM <- bR <- bA <- 0.5
+N = 50
+mu_p = -2
+sigma_p = 0.25
+nu_k = 1
 
 # Body mass
-mass <- exp(seq(log(0.01), log(1000), length.out = N))  # mass on raw scale
-M <- log10(mass)  # log10 body mass
+mass = exp(seq(log(0.01), log(1000), length.out = N))  # mass on raw scale
+M = log10(mass)  # log10 body mass
 
 # Pairwise matrices
-Bi <- matrix(M, N, N)  # consumer
-Bj <- t(Bi)            # resource
+Bi = matrix(M, N, N)  # consumer
+Bj = t(Bi)            # resource
 
 # Covariates
-ratio <- Bi - Bj
-mismatch <- abs(Bi - Bj)
+ratio = Bi - Bj
+mismatch = abs(Bi - Bj)
 
 # Noise
-eps <- matrix(rnorm(N*N, 0, sigma_p), N, N)
+eps = matrix(rnorm(N*N, 0, sigma_p), N, N)
 
 # (1) Consumer Size Model
-pM <- inv_logit(mu_p + bM * M + rnorm(N, 0, sigma_p))
-pM_mat <- matrix(pM, N, N, byrow = TRUE)
-diag(pM_mat) <- NA
+pM = inv_logit(mu_p + nu_k * M + rnorm(N, 0, sigma_p))
+pM_mat = matrix(pM, N, N, byrow = TRUE)
+diag(pM_mat) = NA
 
 # (2) Size Ratio Model
-pR_mat <- inv_logit(mu_p + bR * ratio + eps)
-diag(pR_mat) <- NA
+pR_mat = inv_logit(mu_p + nu_k * ratio + eps)
+diag(pR_mat) = NA
 
 # (3) Size Mismatch Model
-pA_mat <- inv_logit(mu_p + bA * mismatch + eps)
-diag(pA_mat) <- NA
+pA_mat = inv_logit(mu_p + nu_k * mismatch + eps)
+diag(pA_mat) = NA
 
 # (4) Random Model - uniform random probabilities
-p_rand_mat <- matrix(runif(N * N, min = 0, max = 1), N, N)
-diag(p_rand_mat) <- NA
+p_rand_mat = matrix(runif(N * N, min = 0, max = 1), N, N)
+diag(p_rand_mat) = NA
 
 
 # Data for plotting
-dat <- data.frame(
+dat = data.frame(
   consumer_mass_log10 = as.vector(Bi),
   resource_mass_log10 = as.vector(Bj),
   size_ratio = as.vector(ratio),
@@ -193,7 +200,7 @@ First, we can consider the matrices produced by these models. Each cell contains
 ```{r, fig.width=7, fig.height=7, dpi=300}
 # Function to create a raster plot
 library(latex2exp)
-plot_raster <- function(df, zvar, title) {
+plot_raster = function(df, zvar, title) {
   ggplot(df, aes(x = resource_mass_log10, y = consumer_mass_log10, fill = .data[[zvar]])) +
     geom_tile() +
     scale_fill_viridis_c(na.value = "white", name = zvar, option = 'A') +
@@ -214,4 +221,322 @@ p4 = plot_raster(dat, "p_mismatch", "Size Mismatch Model")
 
 
 (p1 + p2) / (p3 + p4)
+```
+
+# Focusing on Size-Ratio
+
+To probe into the implications this model and potential confounds, we will focus on the size-ratio model. Let $M_{i,k}$ and $M_{j,k}$ be the $\text{log}_{10}$ body masses of the consumer and resource species, respectively.
+
+Then the model is
+
+$$
+\begin{align}
+A_{ij,k} &\sim \text{Bernoulli}(q_{ij,k}) & &\text{Observed link} \\
+q_{ij,k} &= \pi_{ij,k} \cdot p_{ij,k} & &\text{True link } \times \text{Detection probability}  \\ 
+\text{logit}(\pi_{ij,k}) &= \alpha_k + u_{i,k} + v_{j,k} + \beta_k M_{i,k} & &\text{True link probability} \\
+\text{logit}(p_{ij,k}) &= \mu_p + \gamma_k(M_{i,k} - \ M_{j,k}) & &\text{Detection probability}
+\end{align}
+$$
+
+Let's imagine a $3 \times 3$ matrix of simulation scenarios for different combinations of $\beta_k$ and $\gamma_k$.
+
+|  |  |  |  |
+|------------------|------------------|------------------|------------------|
+|  | **Null** | **Weak** | **Strong** |
+| **Null** | $\gamma_k = 0$, $\beta_k = 0$ | $\gamma_k = 0$, $\beta_k = 1$ | $\gamma_k = 0$, $\beta_k = 3$ |
+| **Weak** | $\gamma_k = 1$, $\beta_k = 0$ | $\gamma_k = 1$, $\beta_k = 1$ | $\gamma_k = 1$, $\beta_k = 3$ |
+| **Strong** | $\gamma_k = 3$, $\beta_k = 0$ | $\gamma_k = 3$, $\beta_k = 1$ | $\gamma_k = 3$, $\beta_k = 3$ |
+
+For each of these combinations, we simulate an observed food web and then fit the same stan model.
+
+``` stan
+
+data {
+  int<lower=1> N_cons;
+  int<lower=1> N_res;
+  int<lower=1> K;
+  matrix[N_cons,K] M;
+  // observed adjacency
+  array[N_cons, N_res, K] int<lower=0, upper=1> A; 
+}
+
+
+parameters {
+  // body mass slopes 
+  vector[K] beta_k;
+  
+  // body mass detection
+  vector[K] gamma_k;
+  
+  // non-centered latent effects
+  vector[K] alpha_z;
+  matrix[N_cons, K] u_z;
+  matrix[N_res, K] v_z;
+  
+  // hyperparameters
+  real mu_p; 
+  real mu_alpha; 
+  real<lower=0> sigma_alpha; 
+  real<lower=0> sigma_u; 
+  real<lower=0> sigma_v;
+  
+}
+
+model {
+  
+  // priors 
+  beta_k ~ normal(0,1);
+  gamma_k ~ normal(0,1);
+  
+  // priors for latent z-parameters 
+  alpha_z ~ normal(0,1);
+  
+  to_vector(u_z) ~ normal(0,1); 
+  to_vector(v_z) ~ normal(0,1); 
+  
+  //priors for hyperparameters 
+  mu_p ~ normal(0,1);
+  mu_alpha ~ normal(0,1);
+  sigma_alpha ~ exponential(1); 
+
+  sigma_u ~ exponential(1);
+  sigma_v ~ exponential(1);
+  
+  // likelihood 
+  for(k in 1:K) {
+    
+    // link random effect
+    real alpha_k = mu_alpha + sigma_alpha * alpha_z[k];
+    
+    for(i in 1:N_cons) {
+      
+      // consumer random effects 
+      real u_ik = sigma_u * u_z[i,k];
+      
+      for(j in 1:N_res) {
+        
+        // resource random effect 
+        real v_jk = sigma_v * v_z[j,k];
+        
+        // detection random effect
+        real p_ijk = inv_logit(mu_p + gamma_k[k] * (M[i,k] - M[j,k]) );
+        
+        // link probability 
+        real pi_ijk = inv_logit(alpha_k + u_ik + v_jk + beta_k[k] * M[i,k]);
+        
+        // detection adjusted probability 
+        real q_ijk = p_ijk * pi_ijk;
+        
+        // likelihood
+        A[i,j,k] ~ bernoulli(q_ijk);
+      }
+    }
+  }
+}
+
+```
+
+To conduct the simulations, we wrap the simulation in a function and then sweep through a parameter grid.
+
+```{r}
+fw_detection_sim = function(
+    
+  seed = NULL,
+  K    = 5,   
+  S    = 30,
+  
+  mu_alpha    = -2.5, # base rate
+  sigma_alpha = 1,    # variation 
+  sigma_u     = 1.5,  # consumer random effect
+  sigma_v     = 1.5,  # resource random effect
+  
+  mu_p        = -2,   # detection intercept
+  mu_beta     = 1,    # mean effect of consumer mass on preferences
+  sigma_beta  = 0.5,  # variation in beta
+  mu_gamma    = 1,    # mean effect of size ratio on deection 
+  sigma_gamma = 0.3,  # variation in gamma
+  
+  mu_M        = 0,    # mean Mass
+  sigma_M     = 1.5)  # variation in mass 
+
+{
+  
+  # ---- Setup ----
+  set.seed(seed)
+  inv_logit = function(x) exp(x) / (1 + exp(x))
+  
+  # consumer mass 
+  M = matrix(NA_real_, nrow = S, ncol = K)
+  
+  # generate varying base rates and detection probabilities, and body mass effects 
+  alpha_k = rnorm(K, mu_alpha, sigma_alpha)
+  beta_k = rnorm(K, mu_beta, sigma_beta)
+  gamma_k = rnorm(K, mu_gamma, sigma_gamma)
+  
+  # ---- Outputs ----
+  A_Mtrue = array(0, dim = c(S,S,K))
+  A_Mobs  = array(0, dim = c(S,S,K))
+  
+  
+  for(k in 1:K) {
+    # Random effects
+    u_i = rnorm(S, mean = 0, sd = sigma_u)
+    v_j = rnorm(S, mean = 0, sd = sigma_v)
+    
+    # Mass 
+    mass_k = exp(rnorm(S, mu_M, sigma_M))
+    M[,k] = log10(mass_k)
+    
+    # Loop 
+    for(i in 1:S) for(j in 1:S) {
+      
+      # true links 
+      pi_ijk = inv_logit(alpha_k[k] + u_i[i] + v_j[j] + beta_k[k] * M[i,k])
+      
+      # detection probability 
+      ratio_ijk = (M[i,k] - M[j,k])
+      p_ijk = inv_logit(mu_p + gamma_k[k] * ratio_ijk)
+      
+      # true and observed links 
+      A_Mtrue[i,j,k] = rbinom(1, 1, pi_ijk)
+      A_Mobs[i,j,k] = rbinom(1, 1, p_ijk * pi_ijk)
+      
+    }
+  }
+  return(list(
+    true = A_Mtrue, 
+    obs  = A_Mobs, 
+    params = data.frame(alpha_k, beta_k, gamma_k), 
+    data = M
+  ))
+}
+
+
+# run sims 
+mu_beta_seq = c(0,1,3)
+mu_gamma_seq = c(0,1,3)
+params = expand.grid(mu_beta_seq, mu_gamma_seq)
+colnames(params) = c('beta_k','gamma_k')
+
+output = list()
+for( s in 1:nrow(params)) {
+  beta = params[s,1]
+  gamma = params[s,2]
+  output[[s]] = fw_detection_sim(mu_beta = beta, mu_gamma = gamma)
+}
+
+```
+
+All the relevant information to construct the stan data is returned by the function and stored in `output`. However, it must be constructed before fitting the models.
+
+```{r}
+make_stan_data <- function(sim) {
+  
+  A <- sim$obs   # array [S × S × K]
+  M <- sim$data  # matrix [S × K]
+  
+  list(
+    A      = A,
+    N_cons = dim(A)[1],
+    N_res  = dim(A)[2],
+    K      = dim(A)[3],
+    M      = M
+  )
+}
+
+stan_datasets <- lapply(output, make_stan_data)
+```
+
+```{r, eval=F}
+library(cmdstanr)
+det_model = cmdstan_model("detection_model_biomass_det.stan")
+```
+
+```{r, echo=F}
+library(cmdstanr)
+det_model = cmdstan_model("C:/Users/scaggs.32/OneDrive - The Ohio State University/Professional/sascaggs.github.io/posts/2025-11-20-food-web-measurement-2/detection_model_biomass_det.stan")
+```
+
+Now we can run each model and save the fit.
+
+```{r, eval=F}
+fit0_0 = det_model$sample(
+  data = stan_datasets[[1]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.95
+)
+fit0_0$save_output_files('/Fits')
+
+fit1_0 = det_model$sample(
+  data = stan_datasets[[2]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.95
+)
+fit1_0$save_output_files('/Fits')
+
+fit3_0 = det_model$sample(
+  data = stan_datasets[[3]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.95
+)
+fit3_0$save_output_files('/Fits')
+
+fit0_1 = det_model$sample(
+  data = stan_datasets[[4]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.95
+)
+fit0_1$save_output_files('/Fits')
+
+fit1_1 = det_model$sample(
+  data = stan_datasets[[5]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.98
+)
+fit1_1$save_output_files('/Fits')
+
+fit3_1 = det_model$sample(
+  data = stan_datasets[[6]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.98
+)
+fit3_1$save_output_files('/Fits')
+
+fit0_3 = det_model$sample(
+  data = stan_datasets[[7]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.98
+)
+fit0_3$save_output_files('/Fits')
+
+fit1_3 = det_model$sample(
+  data = stan_datasets[[8]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.98
+)
+fit1_3$save_output_files('/Fits')
+fit3_3 = det_model$sample(
+  data = stan_datasets[[9]], 
+  seed = 123, 
+  chains = 4, 
+  parallel_chains = 4, 
+  adapt_delta = 0.98
+)
+fit3_3$save_output_files('/Fits')
 ```
