--- a/CV.qmd
+++ b/CV.qmd
@@ -29,8 +29,8 @@ Ecological, Evolutionary, & Cultural Anthropology $\times$ Complex Adaptive Syst
 ## Professional Preparation
 
 +---------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
-| 2025    | **President's Postdoctoral Scholar\                                                                                                                       |
-|         | **School of Environment and Natural resources (mentor: Jo Peacock), The Ohio State University, Columbus, OH                                          |
+| 2025    | **President's Postdoctoral Scholar (mentor: Jo Peacock)\                                                                                                                       |
+|         | **School of Environment and Natural resources , The Ohio State University, Columbus, OH                                          |
 +---------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
 |         |                                                                                                                                                           |
 +---------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
